--- a/src/Components/CoinTable/cointable.css
+++ b/src/Components/CoinTable/cointable.css
@@ -15,7 +15,7 @@ thead{
 }
 tr{
     display: grid;
-    grid-template-columns: 1fr 1fr 1fr 1fr;
+    grid-template-columns: 1fr 1fr 1fr;
     gap:1rem;
     padding: 1rem;
 }
