--- a/src/Components/CoinTable/cointable.css
+++ b/src/Components/CoinTable/cointable.css
@@ -33,7 +33,7 @@ tr{
 }
 .body-row{
     display: grid;
-    grid-template-columns: 1fr 1fr 1fr 1fr;
+    grid-template-columns: 1fr 1fr 1fr;
     gap:1rem,
 }
 td{
