--- a/src/Components/Banner/banner.css
+++ b/src/Components/Banner/banner.css
@@ -1,14 +1,22 @@
-.banner-container{
-    background:linear-gradient(0deg, rgba(0, 0, 0, 0.9), rgba(0, 0, 0, 0.9)), url('./bg1.jpg');
-    background-repeat: no-repeat;
-    height: 75vh;
-    background-position: center;
-    background-size: cover;
-    position: relative;
-    color: goldenrod;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;    
+.banner-container {
+  background: linear-gradient(0deg, rgba(0, 0, 0, 0.9), rgba(0, 0, 0, 0.9)),
+    url("./bg1.jpg");
+  background-repeat: no-repeat;
+  height: 75vh;
+  background-position: center;
+  background-size: cover;
+  position: relative;
+  color: goldenrod;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-evenly;
 }
-
+.text-container {
+  align-items: center;
+  text-align: center;
+}
+input {
+  width: 10rem;
+  padding: 0.3rem 0.7rem;
+}
