--- a/src/Components/Navbar/navbar.css
+++ b/src/Components/Navbar/navbar.css
@@ -1,24 +1,20 @@
-.nav-container{
-    width: 100%;
-    display: flex;
-    font-size: 1.2rem;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    background-color: #010202;
-    padding: 1rem;
-    text-align: center;
-    color: gold;
-}
-Link{
-    text-decoration: none;
+.nav-container {
+  width: 100%;
+  display: flex;
+  font-size: 1.2rem;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  background-color: #010202;
+  padding: 1rem;
+  text-align: center;
+  color: goldenrod;
 }
 
-@media screen and (min-width : 720px) {
-    .nav-container{
-        flex-direction: row;
-        justify-content: space-evenly;
-        align-items: center;
-    }
-    
+@media screen and (min-width: 720px) {
+  .nav-container {
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+  }
 }
