--- a/src/Page/CoinDetails/coindetails.css
+++ b/src/Page/CoinDetails/coindetails.css
@@ -36,6 +36,38 @@ select{
     color: ivory;
 }
 
+.spinner {
+    width: 100px;
+    height: 100px;
+    margin: 20px auto;
+    border: 4px solid rgba(218, 165, 32, .1);
+    border-left: 4px solid goldenrod;
+    border-right: 4px solid goldenrod;
+    animation: spinner 1s linear infinite forwards;
+    border-radius: 50%;
+}
+
+@keyframes spinner {
+    0% {
+        transform: rotate(0deg)
+    }
+    
+    100% {
+        transform: rotate(360deg)
+    }
+}
+
+.error-container{
+    display: flex;
+    justify-content: center;
+    height: 80vh;
+    align-items: center;
+    color: ivory;
+    font-size: 2.3rem;
+    font-weight: 500;
+    margin: 1rem;
+}
+
 @media screen and (min-width:720px) {
     .chart-coin{
         width: 80%;
